--- a/sys-kernel/coreos-kernel/README
+++ b/sys-kernel/coreos-kernel/README
@@ -31,14 +31,17 @@ To bump to a new version do the following:
 
 3) git fetch --all
 
-3) git checkout -b 'coreos/v3.8.8'
+3) git checkout -b 'coreos/v3.10.10'
 
-4) git reset --hard v3.8.8
+4) git reset --hard v3.10.10
 
-5) git pull . aufs/aufs-3.8
+5) git pull . aufs/aufs-3.10
 
-6) git push github coreos/v3.8.8
+5a) apply any coreos-specific patches that are not yet upstream (i.e. 9p patch)
+    that happened to be in a previous kernel branch.
 
-7) git checkout coreos/master && git reset --hard coreos/v3.8.8 && git push -f github coreos/master
+6) git push github coreos/v3.10.10
+
+7) git checkout coreos/master && git reset --hard coreos/v3.10.10 && git push -f github coreos/master
 
 Then you can bump the hash in the ebuild and move it to the new version here.
