--- a/sys-kernel/coreos-kernel/files/x86_64_defconfig-3.13.2
+++ b/sys-kernel/coreos-kernel/files/x86_64_defconfig-3.13.2
@@ -2785,9 +2785,9 @@ CONFIG_UIO=m
 # CONFIG_UIO_PCI_GENERIC is not set
 # CONFIG_UIO_NETX is not set
 # CONFIG_UIO_MF624 is not set
-CONFIG_VFIO_IOMMU_TYPE1=y
-CONFIG_VFIO=y
-CONFIG_VFIO_PCI=y
+CONFIG_VFIO_IOMMU_TYPE1=m
+CONFIG_VFIO=m
+CONFIG_VFIO_PCI=m
 CONFIG_VFIO_PCI_VGA=y
 CONFIG_VIRT_DRIVERS=y
 CONFIG_VIRTIO=m
