sys-kernel/coreos-kernel: enable Ceph RBD support

--- a/sys-kernel/coreos-kernel/files/x86_64_defconfig-3.15.8
+++ b/sys-kernel/coreos-kernel/files/x86_64_defconfig-3.15.8
@@ -1282,7 +1282,7 @@ CONFIG_BLK_DEV_NVME=m
 CONFIG_XEN_BLKDEV_FRONTEND=m
 CONFIG_VIRTIO_BLK=m
 # CONFIG_BLK_DEV_HD is not set
-# CONFIG_BLK_DEV_RBD is not set
+CONFIG_BLK_DEV_RBD=m
 # CONFIG_BLK_DEV_RSXX is not set
 
 #
