coreos-kernel: enable X32 ABI
This only enables kernel support for the X32 ABI, which is a usefull
optimisation. A program compiled to this ABI will run in native 64-bit
mode, but with 32-bit pointers and data values [1].

[1]: http://lwn.net/Articles/456731/

--- a/sys-kernel/coreos-kernel/files/x86_64_defconfig-3.15.8
+++ b/sys-kernel/coreos-kernel/files/x86_64_defconfig-3.15.8
@@ -4,6 +4,7 @@
 #
 CONFIG_64BIT=y
 CONFIG_X86_64=y
+CONFIG_X86_32=y
 CONFIG_X86=y
 CONFIG_INSTRUCTION_DECODER=y
 CONFIG_OUTPUT_FORMAT="elf64-x86-64"
